--- a/_config.yml
+++ b/_config.yml
@@ -2,10 +2,10 @@
 # Site settings
 # -----------------------------------------------------------------------------
 
-title: blank # the website title (if blank, full name will be used instead)
+title: Geoprocessamento # the website title (if blank, full name will be used instead)
 first_name: Robinson
-middle_name: Barros
-last_name: Geoprocessamento
+middle_name:
+last_name: Barros
 email: robinson.barros@outlook.com
 description: > # the ">" symbol means to ignore newlines until "footer_text:"
   A simple, whitespace theme for academics. Based on [*folio](https://github.com/bogoli/-folio) design.
