--- a/_config.yml
+++ b/_config.yml
@@ -38,7 +38,7 @@ repo_theme_dark: default           # https://github.com/anuraghazra/github-readm
 # will use title and url fields
 # Take a look to https://github.com/jekyll/jekyll-feed for more customization
 
-rss_icon: true
+rss_icon: false
 
 # -----------------------------------------------------------------------------
 # Layout
