--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@
 # Site settings
 # -----------------------------------------------------------------------------
 
-title: # the website title (if blank, full name will be used instead)
+title: Robinson Barros # the website title (if blank, full name will be used instead)
 first_name: Robinson
 middle_name:
 last_name: Barros
@@ -25,8 +25,8 @@ impressum_path:  # set to path to include impressum link in the footer, use the 
 # -----------------------------------------------------------------------------
 
 # code highlighter theme
-highlight_theme_light: github   # https://github.com/jwarby/jekyll-pygments-themes
-highlight_theme_dark: native    # https://github.com/jwarby/jekyll-pygments-themes
+highlight_theme_light: manni   # https://github.com/jwarby/jekyll-pygments-themes
+highlight_theme_dark: dracula    # https://github.com/jwarby/jekyll-pygments-themes
 
 # repo color theme
 repo_theme_light: graywhite       # https://github.com/anuraghazra/github-readme-stats/blob/master/themes/README.md
