--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@
 # -----------------------------------------------------------------------------
 
 title: Robinson Barros # the website title (if blank, full name will be used instead)
-first_name: Robinson
+first_name: Robs
 middle_name:
 last_name: Barros
 email: robinson.barros@outlook.com
@@ -92,7 +92,7 @@ facebook_id: # your facebook id
 discord_id: # your discord id (18-digit unique numerical identifier)
 
 contact_note: >
-  You can even add a little note about which of these is the best way to reach you.
+  Acesse nossas redes sociais acima. 
 
 # -----------------------------------------------------------------------------
 # Analytics and search engine verification
