--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@
 # -----------------------------------------------------------------------------
 
 title: Robinson Barros # the website title (if blank, full name will be used instead)
-first_name: Robs
+first_name: Robinson G L
 middle_name:
 last_name: Barros
 email: robinson.barros@outlook.com
